--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     ></script>
     <script type="text/javascript" src="scripts/shopping-list.js"></script>
 
+    <script type="text/javascript" src="scripts/item.js"></script>
     <script type="text/javascript" src="scripts/store.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
   </body>
